<resources>
    <string name="app_name">Probability Puzzles</string>
    <string name="new_in_this_update">This is version 4.0, released in October 2025 &#8212; now with over ninety puzzles, zero ads, and translations in Spanish, German, and Arabic. Enjoy!
    \n\nSome of the puzzles in this app will be difficult if you haven\'t studied probability. Need to brush up? Have a look at this\u00A0<a href="https://chance.dartmouth.edu/teaching_aids/books_articles/probabilityccc_book/book-5-17-03.pdf">Dartmouth book</a> and these\u00A0<a href="https://ocw.mit.edu/courses/mathematics/18-440-probability-and-random-variables-spring-2014/lecture-notes/">MIT notes</a>. You could also read through some probability problems at\u00A0<a href="https://math.stackexchange.com/questions/tagged/probability">math.stackexchange.com</a>. If you prefer to watch lectures on youtube, try\u00A0<a href="https://www.youtube.com/playlist?list=PLUl4u3cNGP60hI9ATjSFgLZpbNJ7myAg6">these</a> or\u00A0<a href="https://www.youtube.com/playlist?list=PLUl4u3cNGP60A3XMwZ5sep719_nh95qOe">these</a>.
    \n\nThis app is full of math puzzles, and uses Mariusz Gromada\'s mXparser version 6.1.0 to translate mathematical expressions to numbers: it\'ll understand .2, 0.2, 20\%, or 1/5. The parser also understands factorials and binomial coefficients: try typing 5!/(3!*2!) or\u00A0<a href="https://en.wikipedia.org/wiki/Binomial_coefficient">C(5,3)</a> with a capital C for \"5 choose 3.\" You can also type lowercase e for the base of the natural logarithm. Visit\u00A0<a href="http://mathparser.org">mathparser.org</a> for more information.
    \n\nIf you\'d like to contribute to the app (or peek at solutions), have a look at its\u00A0<a href="https://github.com/atorch/probability_puzzles">github repo</a>!</string>
    <string name="app_link">Challenge yourself with probability puzzles &#8212; install the app at https://play.google.com/store/apps/details?id=atorch.statspuzzles</string>
    <string-array name="congratulations">
        <item>Good job! Ready for another one?</item>
        <item>That\'s right &#8212; excellent work!</item>
        <item>Very impressive!</item>
        <item>Bravo, you did it!</item>
        <item>Congratulations, that\'s correct!</item>
        <item>You\'re too good at these!</item>
        <item>You nailed it once again &#8212; nice one!</item>
        <item>Give yourself a big pat on the back, you earned it!</item>
        <item>Outstanding work!</item>
        <item>Outstanding &#8212; now you can impress your friends!</item>
        <item>Great work! Think you can solve them all?</item>
        <item>You\'re a first-rate puzzle solver, if you ask me!</item>
        <item>You\'re the smartest person to ever install this app. Keep it up!</item>
        <item>You got it &#8212; high five!</item>
        <item>Boom &#8212; you did it!</item>
        <item>Good work! Keep up the mental exercise.</item>
        <item>Nice job! You\'re getting smarter with every puzzle.</item>
        <item>Yes, terrific work! That\'s what I call solving a puzzle.</item>
        <item>I\'m impressed&#8230; you rocked that one!</item>
        <item>Very nice work &#8212; Laplace would be impressed!</item>
        <item>If there were a Nobel Prize for probability puzzles, I bet you\'d win!</item>
        <item>Oh yeah &#8212; you got it!</item>
        <item>Go out and celebrate: you earned it!</item>
        <item>You\'re unstoppable!</item>
        <item>Wow, you made it look easy!</item>
        <item>Great job! How about celebrating by crushing the next puzzle?</item>
        <item>Excellent work! Think you can solve the next one?</item>
        <item>Impressive! You\'re getting smarter with each one.</item>
        <item>You\'re a probability hero! Are you ready for your next challenge?</item>
    </string-array>
    <string name="solved_all_puzzles">Impressive &#8212; you\'ve solved all the puzzles in this level!</string>
    <string name="solved_all_intro">You\'re all done with the intro! Are you ready for something more difficult?</string>
    <string name="title_activity_new_settings">Settings</string>
    <string name="congratulations_first_intro">Nice job! If you\'re already a probability expert, feel free to jump back to the main menu and try some difficult questions.</string>
    <string name="congratulations_first_0">You just rocked your first easy peasy puzzle!</string>
    <string name="congratulations_first_1">Welcome to the big leagues: you just solved your first serious puzzle!</string>
    <string name="congratulations_first_2">Slow down there, cowboy &#8212; that\'s a challenging puzzle you just solved!</string>
    <string name="button_intro">Intro</string>
    <string name="button_level_0">Easy Peasy</string>
    <string name="button_level_1">Getting Serious</string>
    <string name="button_level_2">Outrageous</string>
    <string name="button_hint">Need a hint?</string>
    <string name="button_gemini_hint">Talk to Gemini</string>
    <string name="puzzle_copied_to_clipboard">Puzzle copied to clipboard.</string>
    <string name="gemini_not_installed">Gemini app not installed. Opening Play Store.</string>
    <string-array name="levelDescriptions">
        <item>Level: easy peasy &#8212; you\'re just warming up.</item>
        <item>Level: getting serious &#8212; you may need a pen and paper.</item>
        <item>Level: outrageous &#8212; clicking that third button was a bold move.</item>
    </string-array>
    <string name="puzzle">Puzzle %d</string>
    <string name="approximate_result">≈ %s</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="stay_here_button">Stay Here</string>
    <string name="button_back_to_puzzle">Back to Puzzle</string>
    <string name="next_puzzle_button">Next Puzzle</string>
    <string name="okay_button">Okay</string>
    <string name="ok_button">OK</string>
    <string name="solved">solved %1$d / %2$d</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="reset_user_data">Reset Data</string>
    <string name="title_activity_solve_puzzle">Solve Puzzle</string>
    <string name="user_answer_hint">Answer here</string>
    <string name="button_submit_answer">Submit</string>
    <string name="answer_parsing_hint">Your answer can include math:\n try 0.25 or 1/4 or (1/2)^2 or 1/(2*2).</string>
    <string name="swipe_hint">Swipe horizontally to see another puzzle.</string>
    <string name="check_mark_description">Check mark</string>
    <string name="accuracy">That\'s close to correct, but maybe you just got lucky. To convince me otherwise, please enter an answer accurate to within 0.00001. Remember, your answer can include formulas.</string>
    <string name="trouble_parsing_answer">I wasn\'t able to parse your answer (i.e. to translate it to a number). Please try writing it another way, using + and - for addition and subtraction, * and / for multiplication and division, and ^ for exponentiation. Use the digits 0 through 9, possibly with ( and ) as parentheses. Example valid answers are 3/(6*2) and (1/2)^3. Use dots for decimals, e.g. .2 is the same as 1/5 (or as 0.20 or 20\%).</string>
    <string name="apprater_title">Rate Probability Puzzles</string>
    <string name="apprater_message">Enjoying Probability Puzzles? Please take a moment to rate the app in the Play Store. Every review counts. Thank you for helping out!</string>
    <string name="apprater_rate_button">Rate It!</string>
    <string name="apprater_later_button">Maybe Later</string>
    <string name="apprater_never_button">Never</string>
</resources>