<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin_half"
        tools:context="atorch.statspuzzles.PuzzleSelection" >

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:id="@+id/level_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:id="@+id/puzzleNumber"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:id="@+id/puzzleStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView android:contentDescription="@string/check_mark_description"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/puzzleImage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >
            <ImageView android:contentDescription="@string/check_mark_description"
                android:id="@+id/check_mark"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/check" />
            <EditText android:id="@+id/user_answer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:hint="@string/user_answer_hint" />
            <Button android:id="@+id/submit_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_submit_answer" />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin_half"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_half" >
            <ImageView android:contentDescription="@string/check_mark_description"
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/check" />
            <TextView android:id="@+id/answerApprox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <Button android:gravity="center_horizontal"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin_double"
            android:visibility="gone"
            android:id="@+id/button_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/button_hint" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin_double"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipe_hint" />

    </LinearLayout>
</ScrollView>