<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        <LinearLayout android:weightSum="2.618"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin_half" >

            <Button
                android:layout_width="0dp"
                android:id="@+id/button_intro"
                android:layout_height="wrap_content"
                android:layout_weight="1.618"
                android:onClick="startPuzzle"
                android:text="@string/button_intro" />

            <TextView
                android:layout_width="0dp"
                android:id="@+id/counter_intro"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_horizontal_margin_half"
                android:paddingEnd="@dimen/activity_horizontal_margin_half"
                android:textAlignment="viewStart"
                android:text="" />

        </LinearLayout>
        <LinearLayout android:weightSum="2.618"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin_half" >

            <Button
                android:layout_width="0dp"
                android:id="@+id/button_0"
                android:layout_height="wrap_content"
                android:layout_weight="1.618"
                android:onClick="startPuzzle"
                android:text="@string/button_level_0" />

            <TextView
                android:layout_width="0dp"
                android:id="@+id/counter_0"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_horizontal_margin_half"
                android:paddingEnd="@dimen/activity_horizontal_margin_half"
                android:textAlignment="viewStart"
                android:text="" />

        </LinearLayout>
        <LinearLayout android:weightSum="2.618"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin_half" >

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.618"
                android:onClick="startPuzzle"
                android:text="@string/button_level_1" />

            <TextView
                android:id="@+id/counter_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_horizontal_margin_half"
                android:paddingEnd="@dimen/activity_horizontal_margin_half"
                android:textAlignment="viewStart"
                android:text="" />

        </LinearLayout>
        <LinearLayout android:weightSum="2.618"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin_half" >

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.618"
                android:onClick="startPuzzle"
                android:text="@string/button_level_2" />

            <TextView
                android:id="@+id/counter_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:paddingStart="@dimen/activity_horizontal_margin_half"
                android:paddingEnd="@dimen/activity_horizontal_margin_half"
                android:textAlignment="viewStart"
                android:text="" />

        </LinearLayout>
        <TextView
            android:id="@+id/new_in_this_update"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/new_in_this_update"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
